--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
+    "firebase": "^9.15.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.42.1",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-simple-offcanvas": "^1.0.9",
+    "reactstrap": "^9.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
